<resources>
    <string name="app_name">ZipCrackerApp</string>
    <string name="zip_password_cracker">ZIP Password Cracker</string>
    <string name="select_zip_file">Select ZIP File</string>
    <string name="load_custom_password_list">Load Custom Password List</string>
    <string name="number_of_threads">Number of Threads:</string>
    <string name="number_4">4</string>
    <string name="start_cracking">Start Cracking</string>
    <string name="stop">Stop</string>
    <string name="ready">Ready</string>
    <string name="note_password_list">Note: Password list is stored in app\'s internal storage.\n\nDefault location: /data/data/com.example.zipcracker/files/passwords.txt\n\nFound passwords saved to: found_passwords.txt</string>
    <string name="password_found">✓ Password found: %1$s</string>
    <string name="password_not_found_in_list">✗ Password not found in list</string>
</resources>